# FHRCC-Mechanism-KnowledgeGraph

./: .gitignore  README.md  pyproject.toml  requirements.lock.txt
data/: fhrcc_pathway_v1.json  minimal_fh_nrf2.json
docs/: biological_assumptions.md  kg_schema.md  scope_and_goals.md
scripts/: explain_path.py  find_nodes.py  kg.py  lint_graph.py  summarize_graph.py  validate_graph.py
src/fhrcc_mechanismkg/: __init__.py  graph.py  io.py  reporting.py  schema.py
src/fhrcc_mechanismkg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/fhrcc_mechanismkg/reasoning/: path_search.py
tests/: test_minimal_graph.py
