[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fhrcc-mechanismkg"
version = "0.1.0"
description = "Practice knowledge graph for FH-deficient RCC (study tool)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = ""}
authors = [{name = "Selina Wu"}]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
